[package]
name = "plogger"
description = "A simple, ready to import logger for your projects"
homepage = "https://pietrobongiovanni.com"
repository = "https://github.com/pgoodjohn/plogger"
readme = "README.md"
version = "0.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"
